# DashDrop

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN_V1.md  PROTOCOL.md  README.md  RELEASE_CHECKLIST.md  STATUS.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
-O/2ZNDNGNA0D0DH/: CFNetwork-1PNPO1ORVQZLS.pcm  CoreBluetooth-3N0D2Y5GMTUE8.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  DiskArbitration-3LBJF5I58QD8.pcm  Dispatch-R76HXUP80TVL.pcm  MachO-20RPYVQSX341K.pcm  ObjectiveC-1G8H182PQX3QE.pcm  Security-3QCVXOV25KK54.pcm  SwiftShims-2IMTS4WWRU7VJ.pcm  XPC-T0ZXCAST7PE3.pcm  _AvailabilityInternal-2YSBQADOLX02V.pcm  _Builtin_float-19KE09ZDXQ6Q3.pcm  _Builtin_inttypes-19KE09ZDXQ6Q3.pcm  _Builtin_limits-19KE09ZDXQ6Q3.pcm  _Builtin_stdarg-19KE09ZDXQ6Q3.pcm  _Builtin_stdbool-19KE09ZDXQ6Q3.pcm  _Builtin_stddef-19KE09ZDXQ6Q3.pcm  _Builtin_stdint-19KE09ZDXQ6Q3.pcm  _DarwinFoundation1-2YSBQADOLX02V.pcm  _DarwinFoundation2-3J4ZFA06I5V1P.pcm  _DarwinFoundation3-2NSGASPTSNBVQ.pcm  _SwiftConcurrencyShims-2IMTS4WWRU7VJ.pcm  (+8 more)
.github/: dependabot.yml  release.yml
docs/: AIRDROP_SEAMLESS_EXPERIENCE_DESIGN.md  DAEMON_IPC_PROTOCOL.md  DAEMON_REFACTOR_PLAN.md  NETWORK_TROUBLESHOOTING.md  PHASE_A_INTERFACE_FREEZE.md  PLATFORM_INTEGRATION_SCAFFOLD.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_SIGNING_SECRETS.md  RELEASE_VALIDATION_MATRIX.md  RELEASE_VALIDATION_REPORT_TEMPLATE.md  UPGRADE_MIGRATION_TEMPLATE.md
scripts/: prepare_sidecar.mjs  tauri_wrapper.mjs
src/: App.vue  devicePresence.ts  ipc.ts  main.ts  runtimeEventRouting.ts  security.ts  store.ts  style.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/binaries/: dashdrop-ble-bridge-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/macos/: BleAssistBridge.swift
src-tauri/src/: ble.rs  commands.rs  core_service.rs  db.rs  dto.rs  lib.rs  local_ipc.rs  main.rs  pairing.rs  persistence.rs  persistence_progress.rs  state.rs
src-tauri/src/crypto/: cert_verifier.rs  identity.rs  mod.rs  secret_store.rs
src-tauri/src/daemon/: client.rs  server.rs
src-tauri/src/discovery/: beacon.rs  browser.rs  linux_softap.rs  mod.rs  p2p_scheduler.rs  service.rs  windows_softap.rs
src-tauri/src/runtime/: autostart.rs  bootstrap.rs  host.rs  mod.rs  supervisor.rs
src-tauri/src/transport/: client.rs  events.rs  handshake.rs  mod.rs  path_validation.rs  probe.rs  protocol.rs  receiver.rs  sender.rs  server.rs
src-tauri/tests/: phase_d_contract.rs  slo_observability_contract.rs
src-tauri/windows/: BleAssistBridge.ps1  dashdrop.exe.manifest
tests/: daemon_event_subscription.test.ts  e2e_transfer_flow.mjs  runtime_event_routing.test.ts  security_pairing.test.ts  tauri_bundle_smoke.mjs  tauri_daemon_smoke.mjs  tauri_platform_scaffold.test.mjs  tauri_runtime_smoke.mjs
(+20 files in other folders)
