[package]
name = "dashdrop"
version = "0.1.0"
description = "DashDrop — Fast, secure LAN file transfer"
authors = ["DashDrop"]
edition = "2021"
default-run = "dashdrop"

[features]
sidecar = []

[lib]
name = "dashdrop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "dashdropd"
path = "src/bin/dashdropd.rs"
required-features = ["sidecar"]

[[bin]]
name = "dashdrop-ble-bridge"
path = "src/bin/dashdrop-ble-bridge.rs"
required-features = ["sidecar"]

[[bin]]
name = "dashdrop-ble-bridge-linux"
path = "src/bin/dashdrop-ble-bridge-linux.rs"
required-features = ["sidecar"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ciborium = "0.2"

# QUIC / TLS
quinn = { version = "0.11", features = [] }
rustls = { version = "0.23", features = ["ring"], default-features = false }
rustls-pki-types = "1"

# Crypto & Identity
rcgen = { version = "0.13", features = ["pem"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
blake3 = "1"
pkcs8 = { version = "0.10", features = ["pem", "std"] }

# Discovery
mdns-sd = "0.11"
flume = "0.11"
if-addrs = "0.13"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
sysinfo = "0.38.4"
libc = "0.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-store = "2.4.2"
tauri-plugin-deep-link = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
socket2 = "0.5"
arboard = "3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7.0"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "4.3.0"
futures-util = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
keyring = "3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = [
    "Devices_Bluetooth",
    "Devices_Bluetooth_Advertisement",
    "Devices_WiFiDirect",
    "Networking",
    "Networking_Connectivity",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
] }
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Pipes",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "s"
strip = true
